# armentum

./: .env.example  .eslintrc.json  .gitignore  DEPLOYMENT.md  DEVELOPERS.md  DOCUMENTATION_INDEX.md  README.md  README_IMPLEMENTATION.md  SETUP_CHECKLIST.md  index.html  opencode.json  package-lock.json  package.json  render.yaml  tsconfig.json  vitest.config.ts
.opencode/agents/: architecture.md  cicd.md  database.md  frontend.md  orchestrator.md  planning.md  python-backend.md  testing.md  ui-ux.md
Design/: COLOR_PALETTE.md  armentum.pen
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements.txt  start.sh  vercel.json
backend/api/: index.py
backend/app/: __init__.py  config.py  database.py  exceptions.py  main.py  models.py  schemas.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py
backend/app/routers/: __init__.py  admin.py  auth.py  members.py  public.py
backend/app/services/: __init__.py  email_service.py  image_service.py  storage_service.py
backend/app/utils/: __init__.py  db_utils.py  storage_buckets.py
backend/migrations/: env.py
backend/migrations/sql/: indexes_constraints.sql  production_schema.sql  rls_policies.sql  seed_data.sql
backend/migrations/versions/: 001_initial_schema.py  002_add_gallery_images.py
backend/scripts/: init_db.py  reset_db.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_gallery.py  test_main.py  test_members.py  test_models.py  test_public.py  test_schemas.py
docs/: README.md  TASKS.md
e2e/: gallery.spec.ts
skills/: README.md
src/: main.tsx
(+90 files in other folders)
