[project]
name = "armentum-backend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "asyncpg==0.29.0",
    "alembic==1.12.1",
    "supabase==2.3.4",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic-settings==2.1.0",
    "pydantic==2.5.0",
    "pydantic[email]==2.5.0",
    "email-validator==2.1.0",
    "python-dotenv==1.0.0",
    "sendgrid==6.10.0",
    "resend==1.0.1",
    "httpx==0.25.2",
    "python-dateutil==2.8.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
